syntax = "proto3";

option java_multiple_files = true;
package br.com.zup.pact.consumer.resource;

message EmptyRequest {}

message ProductResponse {
  int32 productId = 1;
  string name = 2;
  double price = 3;
  int32 quantity = 4;
  string paymentMethod = 5;
}

service CartService {
  rpc getAll (EmptyRequest) returns (stream ProductResponse) {}
}
